--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -32,6 +32,7 @@ h1 {
   height: 100vh;
   font-size: 1.1em;
   box-shadow: 3px 3px 15px;
+  overflow: auto;
 
   @include mixins.desktop {
     font-size: 1.3em;
