--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,6 +17,7 @@ body {
 }
 
 h1 {
+  color: rgb(112, 84, 50);
   font-size: 2.5em;
   line-height: 1.1;
   margin: 30px 0 40px 0;
@@ -43,22 +44,28 @@ h1 {
 .tasks__paragraf {
   font-size: 1.3em;
   margin-top: 30px;
+  color: rgb(101, 76, 45);
 }
 
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 10px;
+  border-radius:10px;
+  background-color: rgb(112, 84, 50);
 
   @include mixins.tablet {
     flex-direction: row;
     justify-content: center;
+    padding: 40px 10px;
   }
 
   &__input {
     width: 70vw;
     height: 45px;
     border-radius: 15px;
+    border-color: v.$lightColor;
   }
 
   &__btn {
@@ -67,6 +74,7 @@ h1 {
     border-radius: 15px;
     background-color: v.$darkColor;
     margin-top: 5px;
+    border-color: v.$lightColor;
 
     @include mixins.tablet {
       width: 100px;
@@ -77,7 +85,15 @@ h1 {
 
 #tasks__done {
   color: v.$lightColor;
-  text-decoration: line-through;
+
+  li{
+    box-shadow: inset 0px 0px 5px 0px rgb(112, 84, 50, 0.75);
+    
+  }
+  .deleteBtn{
+  border-radius: 15px;
+  padding: 0 6px;
+}
 }
 
 ul {
@@ -87,11 +103,15 @@ ul {
 li {
   list-style: none;
   padding: 10px 15px 10px 20px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   background-color: v.$darkColor;
   border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: -10px 7px 15px 1px rgba(71, 53, 31, 0.75);
 
   @include mixins.desktop {
     padding: 10px 15px 10px 40px;
   }
 }
+
